--- a/CallingAPIFromMVC/CallingAPIFromMVC.csproj
+++ b/CallingAPIFromMVC/CallingAPIFromMVC.csproj
@@ -6,8 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AutoStore.Common\AutoStore.Common.csproj" />
   </ItemGroup>
 
 
